feat: remove obsolete data connected with non existing minio svc endpoints
